--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@decent.xyz/sdk": "^0.2.0",
+    "@decent.xyz/ux-components": "^1.0.7",
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.9.8",
     "@rainbow-me/rainbowkit": "^0.7.0",
