--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ethers": "^5.0.0",
     "next": "^13.0.0",
     "react": "^18.2.0",
+    "react-countup": "^6.4.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.37.0",
     "react-icons": "^4.4.0",
